Fix information overflow.

--- a/apps/island-explorer/src/styles/components/_component-information.scss
+++ b/apps/island-explorer/src/styles/components/_component-information.scss
@@ -9,14 +9,17 @@ $bus-stop-bullet-height: 20px;
 .content {
   .information {
     background-color: color.$color-app-background;
+    box-sizing: border-box;
     grid-column-start: 1;
     grid-row-start: 1;
     height: 100%;
     left: 0;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: dimension.$control-padding-large;
     position: absolute;
     top: 0;
+    width: 100%;
 
     h1 {
       @extend %headline-1;
